--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
               </ul>
             </address>
           </div>
-          <div class="footer-social">
+          <div class="footer-social footer__element">
             <h3 class="footer__tittle">Приєднуйтесь</h3>
             <ul class="social__list list">
               <li class="social__item">
@@ -613,6 +613,7 @@
                   </svg>
                 </a>
               </li>
+
               <li class="social__item">
                 <a
                   class="social__link link"
@@ -654,7 +655,7 @@
               </li>
             </ul>
           </div>
-          <div>
+          <div class="footer__element">
             <strong class="subscribe-title">Підпишіться на розсилку</strong>
             <form class="email-subscribe">
               <input
