--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="header">
       <div class="container header__container">
         <a class="logo link" href="./index.html">Web<span class="logo-text">Studio</span></a>
-        <button class="menu-btn" type="button">
+        <button class="menu-btn" type="button" data-menu-open>
           <svg class="menu-btn__icon" width="40" height="40">
             <use href="./images/icons.svg#mobile-menu"></use>
           </svg>
@@ -759,7 +759,7 @@
 
     <!-- Mobile-menu -->
 
-    <div class="menu-overlay visually-hidden">
+    <div class="menu-overlay" data-menu>
       <div class="menu-container">
         <nav class="nav">
           <ul class="list nav__list">
@@ -841,8 +841,8 @@
             </a>
           </li>
         </ul>
-        <button class="modal__btn" data-modal-close>
-          <svg class="modal__icon" width="40" height="40">
+        <button class="modal__btn" data-menu-close>
+          <svg class="modal__icon" width="19" height="19">
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
