--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
         <nav class="nav">
           <ul class="list nav__list">
             <li class="nav__item">
-              <a class="link nav__link" href="./index.html">Студія</a>
+              <a class="link nav__link nav__link--current" href="./index.html">Студія</a>
             </li>
             <li class="nav__item">
               <a class="link nav__link" href="./portfolio.html">Портфоліо</a>
