--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <header class="header">
       <div class="container header__container">
         <a class="logo link" href="./index.html">Web<span class="logo-text">Studio</span></a>
-        <button class="menu-btn" type="button" data-menu-open>
-          <svg class="menu-btn__icon" width="40" height="40">
+        <button class="mobile-menu__btn" type="button" data-menu-open>
+          <svg class="mobile-menu-btn__icon" width="40" height="40">
             <use href="./images/icons.svg#mobile-menu"></use>
           </svg>
         </button>
