--- a/portfolio.html
+++ b/portfolio.html
@@ -119,7 +119,7 @@
                         ./images/portfolio-img/img-1_desk_@1x.jpg 1x,
                         ./images/portfolio-img/img-1_desk_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- tablet -->
                     <source
@@ -136,7 +136,7 @@
                         ./images/portfolio-img/img-1_tab_@1x.jpg 1x,
                         ./images/portfolio-img/img-1_tab_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- mobile -->
                     <source
@@ -153,7 +153,7 @@
                         ./images/portfolio-img/img-1_mob_@1x.jpg 1x,
                         ./images/portfolio-img/img-1_mob_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <img
                       class="portfolio__img"
@@ -196,7 +196,7 @@
                         ./images/portfolio-img/img-2_desk_@1x.jpg 1x,
                         ./images/portfolio-img/img-2_desk_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- tablet -->
                     <source
@@ -213,7 +213,7 @@
                         ./images/portfolio-img/img-2_tab_@1x.jpg 1x,
                         ./images/portfolio-img/img-2_tab_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- mobile -->
                     <source
@@ -230,7 +230,7 @@
                         ./images/portfolio-img/img-2_mob_@1x.jpg 1x,
                         ./images/portfolio-img/img-2_mob_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <img
                       class="portfolio__img"
@@ -273,7 +273,7 @@
                         ./images/portfolio-img/img-3_desk_@1x.jpg 1x,
                         ./images/portfolio-img/img-3_desk_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- tablet -->
                     <source
@@ -290,7 +290,7 @@
                         ./images/portfolio-img/img-3_tab_@1x.jpg 1x,
                         ./images/portfolio-img/img-3_tab_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- mobile -->
                     <source
@@ -307,7 +307,7 @@
                         ./images/portfolio-img/img-3_mob_@1x.jpg 1x,
                         ./images/portfolio-img/img-3_mob_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <img
                       class="portfolio__img"
@@ -350,7 +350,7 @@
                         ./images/portfolio-img/img-4_desk_@1x.jpg 1x,
                         ./images/portfolio-img/img-4_desk_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- tablet -->
                     <source
@@ -367,7 +367,7 @@
                         ./images/portfolio-img/img-4_tab_@1x.jpg 1x,
                         ./images/portfolio-img/img-4_tab_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- mobile -->
                     <source
@@ -384,7 +384,7 @@
                         ./images/portfolio-img/img-4_mob_@1x.jpg 1x,
                         ./images/portfolio-img/img-4_mob_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <img
                       class="portfolio__img"
@@ -427,7 +427,7 @@
                         ./images/portfolio-img/img-5_desk_@1x.jpg 1x,
                         ./images/portfolio-img/img-5_desk_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- tablet -->
                     <source
@@ -444,7 +444,7 @@
                         ./images/portfolio-img/img-5_tab_@1x.jpg 1x,
                         ./images/portfolio-img/img-5_tab_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- mobile -->
                     <source
@@ -461,7 +461,7 @@
                         ./images/portfolio-img/img-5_mob_@1x.jpg 1x,
                         ./images/portfolio-img/img-5_mob_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <img
                       class="portfolio__img"
@@ -504,7 +504,7 @@
                         ./images/portfolio-img/img-6_desk_@1x.jpg 1x,
                         ./images/portfolio-img/img-6_desk_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- tablet -->
                     <source
@@ -521,7 +521,7 @@
                         ./images/portfolio-img/img-6_tab_@1x.jpg 1x,
                         ./images/portfolio-img/img-6_tab_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- mobile -->
                     <source
@@ -538,7 +538,7 @@
                         ./images/portfolio-img/img-6_mob_@1x.jpg 1x,
                         ./images/portfolio-img/img-6_mob_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <img
                       class="portfolio__img"
@@ -581,7 +581,7 @@
                         ./images/portfolio-img/img-7_desk_@1x.jpg 1x,
                         ./images/portfolio-img/img-7_desk_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- tablet -->
                     <source
@@ -598,7 +598,7 @@
                         ./images/portfolio-img/img-7_tab_@1x.jpg 1x,
                         ./images/portfolio-img/img-7_tab_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- mobile -->
                     <source
@@ -615,7 +615,7 @@
                         ./images/portfolio-img/img-7_mob_@1x.jpg 1x,
                         ./images/portfolio-img/img-7_mob_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <img
                       class="portfolio__img"
@@ -658,7 +658,7 @@
                         ./images/portfolio-img/img-8_desk_@1x.jpg 1x,
                         ./images/portfolio-img/img-8_desk_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- tablet -->
                     <source
@@ -675,7 +675,7 @@
                         ./images/portfolio-img/img-8_tab_@1x.jpg 1x,
                         ./images/portfolio-img/img-8_tab_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- mobile -->
                     <source
@@ -692,7 +692,7 @@
                         ./images/portfolio-img/img-8_mob_@1x.jpg 1x,
                         ./images/portfolio-img/img-8_mob_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <img
                       class="portfolio__img"
@@ -735,7 +735,7 @@
                         ./images/portfolio-img/img-9_desk_@1x.jpg 1x,
                         ./images/portfolio-img/img-9_desk_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- tablet -->
                     <source
@@ -752,7 +752,7 @@
                         ./images/portfolio-img/img-9_tab_@1x.jpg 1x,
                         ./images/portfolio-img/img-9_tab_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <!-- mobile -->
                     <source
@@ -769,7 +769,7 @@
                         ./images/portfolio-img/img-9_mob_@1x.jpg 1x,
                         ./images/portfolio-img/img-9_mob_@2x.jpg 2x
                       "
-                      type="image/jpg"
+                      type="image/jpeg"
                     />
                     <img
                       class="portfolio__img"
