--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button
           class="mobile-menu__btn"
           type="button"
-          aria-label="кнопка мобільного меню"
+          aria-label="Burger-type menu button"
           data-menu-open
         >
           <svg class="mobile-menu-btn__icon" width="40" height="40">
