--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <a class="logo link" href="./index.html">Web<span class="logo-text">Studio</span></a>
         <button
           class="mobile-menu__btn"
+          aria-label="Open mobile menu button"
           type="button"
-          aria-label="Burger-type menu button"
           data-menu-open
         >
           <svg class="mobile-menu-btn__icon" width="40" height="40">
@@ -290,7 +290,7 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.instagram.com"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="instagram"
@@ -303,7 +303,7 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.twitter.com"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="twitter"
@@ -316,10 +316,10 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.facebook.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="facebook"
+                      aria-label="facebook site"
                     >
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
@@ -329,10 +329,10 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.linkedln.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="linkedin"
+                      aria-label="linkedln"
                     >
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -411,7 +411,7 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.instagram.com"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="instagram"
@@ -424,7 +424,7 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.twitter.com"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="twitter"
@@ -437,10 +437,10 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.facebook.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="facebook"
+                      aria-label="facebook site"
                     >
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
@@ -450,10 +450,10 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.linkedln.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="linkedin"
+                      aria-label="linkedln"
                     >
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -532,7 +532,8 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.instagram.com
+"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="instagram"
@@ -545,7 +546,7 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.twitter.com"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="twitter"
@@ -558,10 +559,10 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.facebook.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="facebook"
+                      aria-label="facebook site"
                     >
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
@@ -571,10 +572,10 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.linkedln.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="linkedin"
+                      aria-label="linkedln"
                     >
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -653,7 +654,8 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.instagram.com
+"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="instagram"
@@ -666,7 +668,7 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.twitter.com"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="twitter"
@@ -679,10 +681,10 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.facebook.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="facebook"
+                      aria-label="facebook site"
                     >
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
@@ -692,10 +694,10 @@
                   <li class="social__item">
                     <a
                       class="social__link link"
-                      href=""
+                      href="https://www.linkedln.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="linkedin"
+                      aria-label="linkedln"
                     >
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -1040,7 +1042,7 @@
           <li class="mobile-social__item">
             <a
               class="mobile-social__link link"
-              href=""
+              href="www.instagram.com"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="instagram"
@@ -1050,7 +1052,7 @@
           <li class="mobile-social__item">
             <a
               class="mobile-social__link link"
-              href=""
+              href="www.tvitter.com"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="twitter"
@@ -1060,7 +1062,7 @@
           <li class="mobile-social__item">
             <a
               class="mobile-social__link link"
-              href=""
+              href="www.facebook.com"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="facebook"
@@ -1070,7 +1072,7 @@
           <li class="mobile-social__item">
             <a
               class="mobile-social__link link"
-              href=""
+              href="www.likedln.com"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="linkedin"
