--- a/portfolio.html
+++ b/portfolio.html
@@ -961,7 +961,7 @@
           <li class="mobile-social__item">
             <a
               class="mobile-social__link link"
-              href=""
+              href="www.instagram.com"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="instagram"
@@ -971,7 +971,7 @@
           <li class="mobile-social__item">
             <a
               class="mobile-social__link link"
-              href=""
+              href="www.tvitter.com"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="twitter"
@@ -981,7 +981,7 @@
           <li class="mobile-social__item">
             <a
               class="mobile-social__link link"
-              href=""
+              href="www.facebook.com"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="facebook"
@@ -991,7 +991,7 @@
           <li class="mobile-social__item">
             <a
               class="mobile-social__link link"
-              href=""
+              href="www.likedln.com"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="linkedin"
